# context-window-profiler

./: .env.example  .gitignore  context_window_profiler_trd.md  pyproject.toml
profiler/: ablation.py  cli.py  client.py  judge.py  parser.py  report.py  storage.py
tests/: test_ablation.py  test_parser.py  test_phase3.py
