[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "context-window-profiler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "together>=1.3",
    "python-dotenv>=1.0",
]

[project.scripts]
profiler = "profiler.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["profiler*"]
